I thing this will be the last commit, I HOPE (User can answer new questions that were added)